--- a/case.html
+++ b/case.html
@@ -11,15 +11,20 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Oswald:400,700" media="screen">
+
 </head>
 
 <body class="font-[Noto Sans JP]">
     <header class="bg-[#6B4A34] text-white fixed top-0 left-0 w-full z-50 shadow-lg">
-        <div class="max-w-7xl mx-auto flex flex-col items-center justify-between px-4 py-4">
+        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-14 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
                 <a href="./index.html" class="flex items-center space-x-4">
-                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-13">
+                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-13">
                 </a>
 
                 <!-- Right section - buttons -->
@@ -72,11 +77,11 @@
         <!-- Mobile Menu Header -->
         <div class="flex justify-between items-center px-4 py-4 border-b border-gray-600">
             <a href="#" class="flex items-center space-x-4">
-                                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-10">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-10">
             </a>
             <button id="close-menu-btn" class="flex flex-col items-center space-y-1">
-                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white"
-                    stroke-width="2" viewBox="0 0 24 24">
+                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white" stroke-width="2"
+                    viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
                 <span class="text-xs text-white mt-4">CLOSE</span>
@@ -97,7 +102,8 @@
                         <a href="./service.html" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="./company.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
+                        <a href="./company.html#semina"
+                            class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
                     </li>
                     <li class="border-b border-gray-200">
                         <a href="./company.html" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
@@ -120,12 +126,12 @@
     </div>
     <main class="mt-24">
         <section
-            class="relative -mt-[14px] md:mt-[136px] bg-cover bg-center h-48 md:h-64 flex items-center justify-start"
+            class="relative -mt-[14px] md:mt-[136px] bg-cover bg-center h-48 md:h-[300px] flex items-center justify-start"
             style="background-image: url('./assets/img/fv2.png');">
             <!-- Overlay (orange color) -->
             <div class="absolute inset-0 top-1/2 left-0 transform -translate-y-1/2"></div>
             <div
-                class="bg-white bg-opacity-100 px-auto py-6 text-center text-2xl md:text-5xl font-bold leading-snug w-1/2 shadow-lg opacity-80">
+                class="bg-white bg-opacity-100 px-auto py-6 text-center text-3xl md:text-6xl font-bold leading-snug w-1/2 shadow-lg opacity-80">
                 事例紹介
             </div>
             </div>
@@ -133,8 +139,8 @@
 
         <section class="relative py-16">
             <!-- Large Background Text -->
-            <div
-                class="absolute top-0 right-0 w-full z-10 text-[#F4B635] opacity-10 text-[10rem] font-bold leading-none pointer-events-none select-none">
+            <div class="absolute top-0 left-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                style="font-family: 'Josefin Sans', sans-serif;">
                 CASE
             </div>
 
@@ -142,10 +148,10 @@
                 <div class="max-w-6xl mx-auto px-4 lg:px-0 relative">
 
                     <!-- Grid layout -->
-                    <div class="grid lg:grid-cols-3 gap-8 relative z-10">
+                    <div class="grid lg:grid-cols-4 gap-8 relative z-10">
 
                         <!-- Left: Main content -->
-                        <div class="lg:col-span-2 space-y-6">
+                        <div class="lg:col-span-3 space-y-6">
 
                             <!-- Tag & Date -->
                             <div class="flex justify-between items-center">
@@ -270,7 +276,8 @@
                             <!-- Sidebar item -->
                             <div class="space-y-4">
                                 <div class="flex flex-col gap-4 pb-4">
-                                    <img src="./assets/img/room.png" alt="人気記事1のサムネイル画像" class="w-full h-auto object-cover rounded">
+                                    <img src="./assets/img/room.png" alt="人気記事1のサムネイル画像"
+                                        class="w-full h-auto object-cover rounded">
                                     <div class="flex flex-row justify-between items-center">
                                         <span class="bg-orange-500 text-white text-xs px-2 py-1">タグタイトル名称</span>
                                         <p class="text-gray-500 text-xs mt-1">2025/7/10</p>
@@ -281,7 +288,8 @@
                                 </div>
                                 <!-- Repeat more items -->
                                 <div class="flex flex-col gap-4 pb-4">
-                                    <img src="./assets/img/room.png" alt="人気記事2のサムネイル画像" class="w-full h-auto object-cover rounded">
+                                    <img src="./assets/img/room.png" alt="人気記事2のサムネイル画像"
+                                        class="w-full h-auto object-cover rounded">
                                     <div class="flex flex-row justify-between items-center">
                                         <span class="bg-orange-500 text-white text-xs px-2 py-1">タグタイトル名称</span>
                                         <p class="text-gray-500 text-xs mt-1">2025/7/10</p>
@@ -292,7 +300,8 @@
                                 </div>
 
                                 <div class="flex flex-col gap-4 pb-4">
-                                    <img src="./assets/img/room.png" alt="人気記事3のサムネイル画像" class="w-full h-auto object-cover rounded">
+                                    <img src="./assets/img/room.png" alt="人気記事3のサムネイル画像"
+                                        class="w-full h-auto object-cover rounded">
                                     <div class="flex flex-row justify-between items-center">
                                         <span class="bg-orange-500 text-white text-xs px-2 py-1">タグタイトル名称</span>
                                         <p class="text-gray-500 text-xs mt-1">2025/7/10</p>
@@ -338,12 +347,12 @@
             </div>
         </section>
 
-        <section
-            class="relative w-full pt-32 pb-16 px-6 bg-gradient-to-r from-purple-900 via-blue-900 to-purple-900 text-center">
-            <!-- Large background text -->
-            <h1
-                class="absolute top-0 left-0 pl-4 text-7xl md:text-[240px] font-bold text-[#F4B635] opacity-10 uppercase select-none z-0">
-                CONTACT</h1>
+        <section class="relative w-full pt-32 pb-16 px-6 bg-gradient-to-b from-[#373D54] to-[#07154A] text-center">
+            <!-- Large Background Text -->
+            <div class="absolute top-0 left-0 text-left w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                style="font-family: 'Josefin Sans', sans-serif;">
+                CONTACT
+            </div>
 
             <!-- Heading -->
             <div class="relative mb-10 z-10 text-center justify-center ">
@@ -402,7 +411,7 @@
                     class="relative z-10 w-full max-w-7xl px-6 py-10 flex flex-col sm:flex-row sm:items-center sm:justify-between">
                     <!-- Left logo -->
                     <div class="flex items-center gap-2">
-                        <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-16">
+                        <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-16">
                     </div>
                     <!-- Menu -->
                     <nav class="mt-6 sm:mt-0 flex flex-wrap gap-6 text-sm">
@@ -426,14 +435,15 @@
         <div class="md:hidden bg-[#4A4A4A] text-white px-6 py-8">
             <!-- Logo and Company Name -->
             <div class="flex items-center gap-3 mb-8">
-                <img src="./assets/img/logo.png" alt="リファラルリクルーティング ロゴ" class="h-16">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-16">
             </div>
 
             <!-- Menu Items -->
             <nav class="mb-8">
                 <ul class="space-y-0">
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./index.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>TOP</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -441,7 +451,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./service.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./service.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>サービス紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -449,7 +460,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./case.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./case.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>事例紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -457,7 +469,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./company.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html#semina"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>セミナー</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -465,7 +478,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./company.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>会社概要</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
