--- a/service.html
+++ b/service.html
@@ -11,11 +11,16 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Oswald:400,700" media="screen">
+
 </head>
 
 <body class="font-[Noto Sans JP]">
     <header class="bg-[#6B4A34] text-white fixed top-0 left-0 w-full z-50 shadow-lg">
-        <div class="max-w-7xl mx-auto flex flex-col items-center justify-between px-4 py-4">
+        <div class="max-w-9xl mx-auto flex flex-col items-center justify-between px-14 py-4">
             <div class="flex flex-row items-center w-full justify-between">
                 <!-- Logo and company link -->
                 <a href="./index.html" class="flex items-center space-x-4">
@@ -72,11 +77,11 @@
         <!-- Mobile Menu Header -->
         <div class="flex justify-between items-center px-4 py-4 border-b border-gray-600">
             <a href="#" class="flex items-center space-x-4">
-                                    <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-10">
+                <img src="./assets/img/logo.png" alt="リファラルリクルーティング" class="h-10">
             </a>
             <button id="close-menu-btn" class="flex flex-col items-center space-y-1">
-                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white"
-                    stroke-width="2" viewBox="0 0 24 24">
+                <svg id="close-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="white" stroke-width="2"
+                    viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
                 <span class="text-xs text-white mt-4">CLOSE</span>
@@ -97,7 +102,8 @@
                         <a href="./service.html" class="block py-4 text-lg font-medium hover:text-orange-500">サービス紹介</a>
                     </li>
                     <li class="border-b border-gray-200">
-                        <a href="./company.html#semina" class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
+                        <a href="./company.html#semina"
+                            class="block py-4 text-lg font-medium hover:text-orange-500">セミナー</a>
                     </li>
                     <li class="border-b border-gray-200">
                         <a href="./company.html" class="block py-4 text-lg font-medium hover:text-orange-500">会社概要</a>
@@ -120,12 +126,12 @@
     </div>
     <main class="mt-24">
         <section
-            class="relative -mt-[14px] md:mt-[136px] bg-cover bg-center h-48 md:h-64 flex items-center justify-start"
+            class="relative -mt-[14px] md:mt-[136px] bg-cover bg-center h-48 md:h-[300px] flex items-center justify-start"
             style="background-image: url('./assets/img/fv2.png');">
             <!-- Overlay (orange color) -->
             <div class="absolute inset-0 top-1/2 left-0 transform -translate-y-1/2"></div>
             <div
-                class="bg-white bg-opacity-100 px-auto py-6 text-center text-2xl md:text-5xl font-bold leading-snug w-1/2 shadow-lg opacity-80">
+                class="bg-white bg-opacity-100 px-auto py-6 text-center text-3xl md:text-6xl font-bold leading-snug w-1/2 shadow-lg opacity-80">
                 サービス紹介
             </div>
             </div>
@@ -133,8 +139,8 @@
 
         <section class="relative py-16">
             <!-- Large Background Text -->
-            <div
-                class="absolute top-0 right-0 w-full z-10 text-[#78766F] opacity-10 text-[10rem] font-bold leading-none pointer-events-none select-none">
+            <div class="absolute top-0 left-0 w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                style="font-family: 'Josefin Sans', sans-serif;">
                 ABOUT
             </div>
             <!-- Small Title -->
@@ -150,7 +156,7 @@
                 </p>
             </div>
 
-            <div class="container mx-auto px-4 text-center">
+            <div class="w-base mx-auto px-4 text-center">
                 <!-- Points -->
                 <div class="my-20 grid grid-cols-1 md:grid-cols-3 gap-20 md:gap-6">
                     <!-- Point 1 -->
@@ -160,7 +166,7 @@
                         <div
                             class="absolute -top-10 left-1/2 transform -translate-x-1/2 bg-orange-500 text-white w-20 h-20 rounded-full flex flex-col items-center justify-center shadow-lg">
                             <div class="text-xs font-bold">POINT</div>
-                            <div class="text-2xl font-bold">01</div>
+                            <div class="text-4xl font-bold">01</div>
                         </div>
 
                         <!-- Icon -->
@@ -169,10 +175,10 @@
                         </div>
 
                         <!-- Heading -->
-                        <h4 class="text-xl font-bold mb-4 text-center text-gray-800">最高の仲間を採用</h4>
+                        <h4 class="text-3xl font-bold mb-4 text-center text-gray-800">最高の仲間を採用</h4>
 
                         <!-- Description -->
-                        <p class="text-gray-600 text-sm leading-relaxed text-center max-w-xs">
+                        <p class="text-gray-600 text-base leading-relaxed text-center max-w-xs">
                             自社のことを熟知している社員が、人柄まで知っている友人・知人を推薦してくれるため、自社の文化にマッチした優秀な仲間を採用できます。
                         </p>
                     </div>
@@ -184,7 +190,7 @@
                         <div
                             class="absolute -top-10 left-1/2 transform -translate-x-1/2 bg-orange-500 text-white w-20 h-20 rounded-full flex flex-col items-center justify-center shadow-lg">
                             <div class="text-xs font-bold">POINT</div>
-                            <div class="text-2xl font-bold">02</div>
+                            <div class="text-4xl font-bold">02</div>
                         </div>
 
                         <!-- Icon -->
@@ -193,10 +199,10 @@
                         </div>
 
                         <!-- Heading -->
-                        <h4 class="text-xl font-bold mb-4 text-center text-gray-800">採用コストを削減</h4>
+                        <h4 class="text-3xl font-bold mb-4 text-center text-gray-800">採用コストを削減</h4>
 
                         <!-- Description -->
-                        <p class="text-gray-600 text-sm leading-relaxed text-center max-w-xs">
+                        <p class="text-gray-600 text-base leading-relaxed text-center max-w-xs">
                             社員からの推薦を通じて採用活動を行うため、採用媒体や紹介会社を経由しないので従来の採用コストを大幅に削減することができます。
                         </p>
                     </div>
@@ -208,7 +214,7 @@
                         <div
                             class="absolute -top-10 left-1/2 transform -translate-x-1/2 bg-orange-500 text-white w-20 h-20 rounded-full flex flex-col items-center justify-center shadow-lg">
                             <div class="text-xs font-bold">POINT</div>
-                            <div class="text-2xl font-bold">03</div>
+                            <div class="text-4xl font-bold">03</div>
                         </div>
 
                         <!-- Icon -->
@@ -217,17 +223,18 @@
                         </div>
 
                         <!-- Heading -->
-                        <h4 class="text-xl font-bold mb-4 text-center text-gray-800">離職率が低下</h4>
+                        <h4 class="text-3xl font-bold mb-4 text-center text-gray-800">離職率が低下</h4>
 
                         <!-- Description -->
-                        <p class="text-gray-600 text-sm leading-relaxed text-center max-w-xs">
+                        <p class="text-gray-600 text-base leading-relaxed text-center max-w-xs">
                             自社のことを知る仲間から推薦されるので、入社後のミスマッチが発生しにくく、離職率の低下が期待できます。
                         </p>
                     </div>
                 </div>
 
                 <!-- Description -->
-                <div class="mt-8 text-gray-700 !leading-8 text-sm md:text-base text-left max-w-4xl mx-auto">
+                <div
+                    class="mx-0 sm:mx-[20px] md:mx-[100px] mt-8 text-gray-700 !leading-8 text-base md:text-base text-left">
                     <p class="mb-4">
                         自社に魅力を感じている、言い換えると社長と会社のことを好きな幹部・社員でプロジェクトチームを組みます。つぎに、そのプロジェクトチームで自社の魅力を様々な角度から徹底的に洗い出し、それをまとめて見える化します。
                     </p>
@@ -242,8 +249,8 @@
 
         <section class="bg-white py-16 relative">
             <!-- Large Background Text -->
-            <div
-                class="hidden md:block absolute top-0 right-0 z-10 text-[#F4B635] opacity-10 text-[10rem] font-bold leading-none pointer-events-none select-none">
+            <div class="hidden md:block text-right absolute top-0 right-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                style="font-family: 'Josefin Sans', sans-serif;">
                 POINT
             </div>
 
@@ -261,8 +268,8 @@
                 <!-- Right side (Text) -->
                 <div class="relative">
                     <!-- Large Background Text -->
-                    <div
-                        class="block md:hidden absolute top-0 right-0 z-10 text-[#F4B635] opacity-10 text-[10rem] font-bold leading-none pointer-events-none select-none">
+                    <div class="block md:hidden absolute top-0 right-0 w-full text-[#F4B635] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                        style="font-family: 'Josefin Sans', sans-serif;">
                         POINT
                     </div>
 
@@ -280,7 +287,7 @@
                         </p>
                     </div>
 
-                    <p class="text-gray-700 leading-relaxed !leading-8 text-sm md:text-base">
+                    <p class="px-[10px] text-gray-700 leading-relaxed !leading-8 text-base md:text-base">
                         「社員は友人・知人を紹介してくれるだろうか」「実際に自社でも友人紹介制度を取り入れたけれど、なかなか紹介してくれない」そういった不安・悩みをお持ちの社長・人事責任者も多いと思います。
                         人は自分が良いと思ったものしか紹介しません。そのためリファラルリクルーティングは、本質的に自社に魅力を感じている社員からしか起こり得ません。
                         しかし、会社で働いていると社長も社員も自社の魅力が見えなくなってしまう。見えていたとしても、魅力の全てを知っているわけではない・・・そこにリファラルリクルーティング成功の第１の条件が隠れています。
@@ -293,8 +300,8 @@
             <div class="container mx-auto px-4 text-center">
 
                 <!-- Large Background Text -->
-                <div
-                    class="absolute top-0 left-0 z-10 text-[#78766F] opacity-10 text-[10rem] font-bold leading-none pointer-events-none select-none">
+                <div class="absolute top-0 text-left w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                    style="font-family: 'Josefin Sans', sans-serif;">
                     FLOW
                 </div>
                 <!-- Small Title -->
@@ -312,7 +319,7 @@
                 </div>
 
                 <!-- Description -->
-                <div class="mt-8 text-gray-700 !leading-8 text-sm md:text-base text-left max-w-4xl mx-auto">
+                <div class="mt-8 text-gray-700 !leading-8 text-sm md:text-base text-left w-base mx-auto">
                     <p class="mb-4">
                         自社に魅力を感じている、言い換えると社長と会社のことを好きな幹部・社員でプロジェクトチームを組みます。つぎに、そのプロジェクトチームで自社の魅力を様々な角度から徹底的に洗い出し、それをまとめて見える化します。そして、自社に合う友人・知人を徹底的に洗い出し、自社の魅力をもって友人・知人を口説きにいきます。
                     </p>
@@ -402,7 +409,7 @@
             </div>
         </section>
 
-        
+
         <section class="relative bg-gray-100 h-[400px]">
             <!-- Background Image -->
             <div class="absolute inset-0">
@@ -431,12 +438,12 @@
             </div>
         </section>
 
-        <section
-            class="relative w-full pt-32 pb-16 px-6 bg-gradient-to-r from-purple-900 via-blue-900 to-purple-900 text-center">
-            <!-- Large background text -->
-            <h1
-                class="absolute top-0 left-0 pl-4 text-7xl md:text-[240px] font-bold text-[#F4B635] opacity-10 uppercase select-none z-0">
-                CONTACT</h1>
+        <section class="relative w-full pt-32 pb-16 px-6 bg-gradient-to-b from-[#373D54] to-[#07154A] text-center">
+            <!-- Large Background Text -->
+            <div class="absolute top-0 left-0 text-left w-full text-[#78766F] opacity-10 text-7xl sm:text-9xl lg:text-[240px] font-bold leading-none pointer-events-none select-none"
+                style="font-family: 'Josefin Sans', sans-serif;">
+                CONTACT
+            </div>
 
             <!-- Heading -->
             <div class="relative mb-10 z-10 text-center justify-center ">
@@ -526,7 +533,8 @@
             <nav class="mb-8">
                 <ul class="space-y-0">
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./index.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./index.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>TOP</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -534,7 +542,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./service.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./service.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>サービス紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -542,7 +551,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./case.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./case.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>事例紹介</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -550,7 +560,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./company.html#semina" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html#semina"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>セミナー</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
@@ -558,7 +569,8 @@
                         </a>
                     </li>
                     <li class="border-b border-white border-opacity-20">
-                        <a href="./company.html" class="flex items-center justify-between py-4 text-white hover:text-orange-400">
+                        <a href="./company.html"
+                            class="flex items-center justify-between py-4 text-white hover:text-orange-400">
                             <span>会社概要</span>
                             <svg class="w-3 h-3 text-black" fill="white" viewBox="0 0 24 24">
                                 <path d="M8 5v14l11-7z" />
